2.2.5/_sources/gallery/event_handling/legend_picking.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_event_handling_legend_picking.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_event_handling_legend_picking.py:


==============
Legend Picking
==============

Enable picking on the legend to toggle the original line on and off



.. image:: /gallery/event_handling/images/sphx_glr_legend_picking_001.png
    :class: sphx-glr-single-img






.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt

    t = np.arange(0.0, 0.2, 0.1)
    y1 = 2*np.sin(2*np.pi*t)
    y2 = 4*np.sin(2*np.pi*2*t)

    fig, ax = plt.subplots()
    ax.set_title('Click on legend line to toggle line on/off')
    line1, = ax.plot(t, y1, lw=2, color='red', label='1 HZ')
    line2, = ax.plot(t, y2, lw=2, color='blue', label='2 HZ')
    leg = ax.legend(loc='upper left', fancybox=True, shadow=True)
    leg.get_frame().set_alpha(0.4)


    # we will set up a dict mapping legend line to orig line, and enable
    # picking on the legend line
    lines = [line1, line2]
    lined = dict()
    for legline, origline in zip(leg.get_lines(), lines):
        legline.set_picker(5)  # 5 pts tolerance
        lined[legline] = origline


    def onpick(event):
        # on the pick event, find the orig line corresponding to the
        # legend proxy line, and toggle the visibility
        legline = event.artist
        origline = lined[legline]
        vis = not origline.get_visible()
        origline.set_visible(vis)
        # Change the alpha on the line in the legend so we can see what lines
        # have been toggled
        if vis:
            legline.set_alpha(1.0)
        else:
            legline.set_alpha(0.2)
        fig.canvas.draw()

    fig.canvas.mpl_connect('pick_event', onpick)

    plt.show()


.. _sphx_glr_download_gallery_event_handling_legend_picking.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: legend_picking.py <legend_picking.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: legend_picking.ipynb <legend_picking.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
